# Muntii-Fagaras

./: .gitattributes  .gitignore  .gitmodules  README.md  compile_commands.json  contribute.txt  query.json  tsukuyomi_libcurl_test.cpp
.github/: PULL_REQUEST_TEMPLATE.md  c-problem-matcher.json  gcc.json
.github/ISSUE_TEMPLATE/: ----.md  (+2 more)
docs/: CONTRIBUTING.md  README.md
src/: .clang-format  Makefile  cpp.hint  gui-base  gui_base.cbp  gui_base.depend  gui_base.layout  icon.rc  main.cpp  main.hpp  makefile  meson.build  nullptr.txt  resource.h  src.rc  src.sln  src.vcxproj  src.vcxproj.filters  stdafx.h  xmake.lua
src/Android/gui-base/: gradle.properties
src/Android/gui-base/app/: build.gradle
src/Android/gui-base/app/jni/: Application.mk  CMakeLists.txt
src/Android/gui-base/app/jni/src/: Android.mk  CMakeLists.txt  main.cpp  stdafx.h
src/Android/gui-base/app/jni/src/class/: checkbox.cpp  checkbox.hpp  font.cpp  font.hpp  image.cpp  image.hpp  load_file.cpp  load_file.hpp  mouse.cpp  mouse.hpp  text.cpp  text.hpp  voice.cpp  voice.hpp
src/Android/gui-base/app/src/main/: AndroidManifest.xml
src/Android/gui-base/app/src/main/java/org/gui_base/app/: gui_base.java
src/class/: FilePass.cpp  FilePass.hpp  MainScreen.cpp  MainScreen.h  MainScreen.hpp  ManageTexts.cpp  ManageTexts.hpp  MuntiiFagaras.cpp  MuntiiFagaras.hpp  MyFile.cpp  MyFile.h  MyFile.hpp  Text.cpp  Text.hpp  TextFile.cpp  TextFile.h  TextFile.hpp  Tile.cpp  Tile.hpp  TileEditSpace.cpp  TileSupportCharactor.cpp  TileSupportCharactor.hpp  button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  font.cpp  font.hpp  image.cpp  image.hpp  load_file.cpp  load_file.hpp  mouse.cpp  mouse.hpp  rpn.cpp  rpn.hpp  text.cpp  text.hpp  voice.cpp  voice.hpp
src/class/Control/: Control.cpp  Control.hpp  ControlButton.cpp  ControlButton.hpp  ControlEditSpace.cpp  ControlEditSpace.hpp  ControlLabel.cpp  ControlLabel.hpp
src/class/Task/: Task.hpp  TaskKind.hpp  TaskMainScreen.hpp  TaskManageTexts.hpp  TaskSupport.hpp
src/class/Tile/: Tile.cpp  Tile.hpp  TileEditSpace.cpp  TileEditSpace.hpp  TileMenuBar.cpp  TileMenuBar.hpp  TileSupportCharactor.cpp  TileSupportCharactor.hpp
src/vs2022/: vs2022.sln
src/vs2022/main/: main.vcxproj  main.vcxproj.filters
(+6 files in other folders)
